added navbar and banner

--- a/index.html
+++ b/index.html
@@ -4,16 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids School</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles/school.css">
+<link rel="stylesheet" href="styles/media.css">
 </head>
-<body>
+<body class="quicksand-primary">
     <header>
-
+<div class="navbar display">
+    <div class="navbar-left display">
+        <img src="assets/logo.png" alt="">
+        <h3 class="font-bold">SCHOOL</h3>
+    </div>
+       <!-- <marquee behavior="" direction=""> -->
+         <ul class="navbar-middle display">
+            <li><a href="" class="nav-link home font-bold">Home</a></li>
+            <li><a href="" class="nav-link about font-bold">About</a></li>
+            <li><a href="" class="nav-link facilities font-bold">Facilities</a></li>
+            <li><a href="" class="nav-link admission font-bold">Admission</a></li>
+        </ul>
+    <!-- </marquee> -->
+<button class="btn-primary nav-button">Contact</button>
+</div>
+<div class="banner">
+    <div class="banner-content">
+        <h2><span class="empower">Empowering</span> <br>students from small <br> age <span class="vision"> towards vision</span></h2>
+        <p>With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.</p>
+        <button class="btn-primary">Enroll Nows</button>
+    </div>
+    <div class="banner-img">
+        <img src="assets/hero-kids.png" alt="">
+    </div>
+</div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
