added responsive css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <link rel="stylesheet" href="styles/school.css">
 <link rel="stylesheet" href="styles/media.css">
 </head>
-<body class="quicksand-primary">
-    <header>
+<body class="quicksand-primary body">
+    <header class="header">
 <div class="navbar display">
     <div class="navbar-left display">
         <img src="assets/logo.png" alt="">
@@ -26,11 +26,16 @@
         </ul>
     <!-- </marquee> -->
 <button class="btn-primary nav-button">Contact</button>
+<div class="hamburger-menu">
+    <span></span>
+<span></span>
+<span></span>
+</div>
 </div>
 <div class="banner">
     <div class="banner-content">
         <h2><span class="empower">Empowering</span> <br>students from small <br> age <span class="vision"> towards vision</span></h2>
-        <p>With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.</p>
+        <p>With the courage, Confidence, Creativity and <br class="break"> Compassion to make <br class="break-1"> their Unique Contribution in a <br class="break"> Diverse and Dynamic World.</p>
         <button class="btn-primary">Enroll Nows</button>
     </div>
     <div class="banner-img">
