--- a/index.html
+++ b/index.html
@@ -44,7 +44,33 @@
 </div>
     </header>
     <main>
-
+<div class="curriculum">
+    <h3>Standard Curriculum</h3>
+    <div class="curriculum-card display">
+        <div class="card-1">
+            <img src="assets/kinder.png" alt="">
+            <h4 class="curriculum-header">Kinder (3-6) Years</h4>
+            <p class="curriculum-text">Cum sociis natoque penatibus et magnis <br> dis parturient montes, nascetur ridiculus <br> mu sdis parturient</p>
+            <a href="" class="card-1a">Read More</a>
+        </div>
+        <div class="card-2">
+            <img src="assets/elementary.png" alt="">
+            <h4 class="curriculum-header">Elementary School</h4>
+            <p class="curriculum-text">Cum sociis natoque penatibus et magnis <br> dis parturient montes, nascetur ridiculus <br> mu sdis parturient</p>
+            <a href="" class="card-2a">Read More</a>
+        </div>
+        <div class="card-3">
+            <img src="assets/middle.png" alt="">
+            <h4 class="curriculum-header">Middle (10-16) Years</h4>
+            <p class="curriculum-text">Cum sociis natoque penatibus et magnis <br> dis parturient montes, nascetur ridiculus <br> mu sdis parturient</p>
+            <a href="" class="card-3a">Read more</a>
+        </div>
+    </div>
+    <div class="arrow-button">
+        <button class="circle-btn"><span class="arrow left"></span></button>
+        <button class="circle-btn"><span class="arrow right"></span></button>
+    </div>
+</div>
     </main>
     <footer>
 
