--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles/school.css">
 <link rel="stylesheet" href="styles/media.css">
 </head>
@@ -43,26 +46,26 @@
     </div>
 </div>
     </header>
-    <main>
+    <main class="main">
 <div class="curriculum">
     <h3>Standard Curriculum</h3>
     <div class="curriculum-card display">
         <div class="card-1">
             <img src="assets/kinder.png" alt="">
             <h4 class="curriculum-header">Kinder (3-6) Years</h4>
-            <p class="curriculum-text">Cum sociis natoque penatibus et magnis <br> dis parturient montes, nascetur ridiculus <br> mu sdis parturient</p>
+            <p class="curriculum-text raleway-primary">Cum sociis natoque penatibus et magnis <br> dis parturient montes, nascetur ridiculus <br> mu sdis parturient</p>
             <a href="" class="card-1a">Read More</a>
         </div>
         <div class="card-2">
             <img src="assets/elementary.png" alt="">
             <h4 class="curriculum-header">Elementary School</h4>
-            <p class="curriculum-text">Cum sociis natoque penatibus et magnis <br> dis parturient montes, nascetur ridiculus <br> mu sdis parturient</p>
+            <p class="curriculum-text raleway-primary">Cum sociis natoque penatibus et magnis <br> dis parturient montes, nascetur ridiculus <br> mu sdis parturient</p>
             <a href="" class="card-2a">Read More</a>
         </div>
         <div class="card-3">
             <img src="assets/middle.png" alt="">
             <h4 class="curriculum-header">Middle (10-16) Years</h4>
-            <p class="curriculum-text">Cum sociis natoque penatibus et magnis <br> dis parturient montes, nascetur ridiculus <br> mu sdis parturient</p>
+            <p class="curriculum-text raleway-primary">Cum sociis natoque penatibus et magnis <br> dis parturient montes, nascetur ridiculus <br> mu sdis parturient</p>
             <a href="" class="card-3a">Read more</a>
         </div>
     </div>
@@ -71,9 +74,93 @@
         <button class="circle-btn"><span class="arrow right"></span></button>
     </div>
 </div>
+<div class="our-stories">
+    <h3>Our Stories</h3>
+    <div class="story">
+        <div class="article-left">
+        <img src="assets/story-1.png" alt="">
+        <div class="date-pill raleway-primary">November 19, 2019</div>
+        <p class="story-header">A fun toddler coloring training on <br>classroom</p>
+        <p class="raleway-primary story-text">Beautiful branding for changes by Never Now in Australia. <br>changes is a platform for open discussion in an inclusive and <br>collaborative environment, providing the...</p>
+    </div>
+    <div class="article-right">
+        <div class="article-1">
+            <img src="assets/story-2.png" alt="">
+           <div class="article-down">
+            <div class="date-pill-1 raleway-primary">November 19, 2019</div>
+            <p>Find out if a school fits the <br>family’s needs</p>
+           </div>
+        </div>
+        <div class="article-2">
+            <img src="assets/story-3.png" alt="">
+           <div class="article-down">
+            <div class="date-pill-2 raleway-primary">November 19, 2019</div>
+            <p>Summer math & literacy <br>centres for kids</p>
+           </div>
+        </div>
+        <div class="article-2 media">
+            <img src="assets/story-3.png" alt="">
+            <div class="article-down">
+            <div class="date-pill-2 raleway-primary">November 19, 2019</div>
+            <p>Summer math & literacy <br>centres for kids</p>
+            </div>
+        </div>
+        <div class="article-2 media">
+            <img src="assets/story-3.png" alt="">
+            <div class="article-down">
+                <div class="date-pill-2 raleway-primary">November 19, 2019</div>
+            <p>Summer math & literacy <br>centres for kids</p>
+            </div>
+        </div>
+        <div class="article-3">
+            <img src="assets/story-4.png" alt="">
+            <div class="article-down">
+                <div class="date-pill-3 raleway-primary">November 19, 2019</div>
+            <p>Classroom management <br>techniques for new tutors</p>
+            </div>
+        </div>
+        <div class="article-4">
+            <img src="assets/story-5.png" alt="">
+            <div class="article-down">
+                <div class="date-pill-4 raleway-primary">November 19, 2019</div>
+            <p>Conversation rhymes <br>improve kids listening</p>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="story-button"><button class="btn-primary">View All</button></div>
+</div>
     </main>
     <footer>
-
+<div class="footer-section">
+    <div class="footer-left">
+        <div class="footer-header">
+            <img src="assets/logo -1 Copy.png" alt="">
+            <p class="footer-title">Kids <br> Education</p>
+        </div>
+        <div class="footer-text">Pizza ipsum dolor meat lovers buffalo. <br> Deep dolor roll melted bacon Bianca pan <br> bacon pineapple Aussie. Mayo rib sauce <br> Hawaiian meatball.</div>
+    </div>
+    <div>
+        <ul class="footer-middle">
+            <li class="feet"><a href="" class="foot-head">About School</a></li>
+            <div class="foot-gap">
+                <li><a href="" class="footer-link">Home</a></li>
+            <li><a href="" class="footer-link">About</a></li>
+            <li><a href="" class="footer-link">Facilities</a></li>
+            <li><a href="" class="footer-link">Admission</a></li>
+            </div>
+        </ul>
+    </div>
+    <div class="footer-right">
+        <p class="foot-right-head">Keep In Touch</p>
+        <div class="footer-logo">
+            <img src="assets/fb.png" alt="">
+            <img src="assets/dribble.png" alt="">
+            <img src="assets/twitter.png" alt="">
+            <img src="assets/google+.png" alt="">
+        </div>
+    </div>
+</div>
     </footer>
 </body>
 </html>
